--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Índice - Servicios en Red</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: "Segoe UI", sans-serif;
+            background: #0d1117;
+            color: #e6edf3;
+        }
 
+        header {
+            padding: 2rem;
+            text-align: center;
+            background: #161b22;
+            border-bottom: 1px solid #30363d;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 2.2rem;
+            letter-spacing: 1px;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 2rem auto;
+            padding: 1rem;
+        }
+
+        .link-list {
+            display: grid;
+            gap: 1rem;
+        }
+
+        a.page-link {
+            display: block;
+            padding: 1rem 1.2rem;
+            background: #21262d;
+            border: 1px solid #30363d;
+            border-radius: 10px;
+            text-decoration: none;
+            color: #e6edf3;
+            font-size: 1.1rem;
+            transition: 0.2s;
+        }
+
+        a.page-link:hover {
+            background: #2b323b;
+            transform: translateY(-2px);
+        }
+
+        footer {
+            margin-top: 3rem;
+            text-align: center;
+            padding: 1rem;
+            color: #7d8590;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Índice de Páginas - Servicios en Red</h1>
+</header>
+
+<div class="container">
+    <div class="link-list">
+        <a class="page-link" href="arg.html">Página 1: ARG</a>
+        <!-- Añade más enlaces aquí → ejemplo:
+        <a class="page-link" href="nombre.html">Título</a> 
+    </div>
+</div>
+
+<footer>
+    © Alejandro Fernández López-Cepero 2025 - Servicios en Red
+</footer>
+
+</body>
+</html>
