--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <div class="container">
     <div class="link-list">
-        <a class="page-link" href="arg.html">Práctica de Acceso Remoto Gráfico</a>
+        <a href="arg.html">Práctica de Acceso Remoto Gráfico</a>
         <!-- Añade más enlaces aquí → ejemplo:
         <a class="page-link" href="nombre.html">Título</a> 
     </div>
