--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
 
 <div class="container">
     <div class="link-list">
-        <a href="arg.html">Práctica de Acceso Remoto Gráfic</a>
-        <!-- Añade más enlaces aquí → ejemplo:
-        <a class="page-link" href="nombre.html">Título</a> 
+        <a class="page-link" href="arg.html">Práctica de Acceso Remoto Gráfico</a>
+        <!-- <a class="page-link" href="arg.html">Práctica de Acceso Remoto Gráfico</a>
+        <a class="page-link" href="arg.html">Práctica de Acceso Remoto Gráfico</a> -->
+        
     </div>
 </div>
 
